improve: 添加 mapstruct

--- a/beyond-library-ddd-infrastructure/pom.xml
+++ b/beyond-library-ddd-infrastructure/pom.xml
@@ -36,9 +36,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
