feat: 添加 Guava 事件

--- a/beyond-library-ddd-application/pom.xml
+++ b/beyond-library-ddd-application/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
