--- a/beyond-library-ddd-infrastructure/pom.xml
+++ b/beyond-library-ddd-infrastructure/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>mapstruct</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
