--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,9 @@
         <spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
         <spring.cloud.circuitbreaker.version>2.1.1</spring.cloud.circuitbreaker.version>
 
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <mapstruct.version>1.5.0.Final</mapstruct.version>
+        <guava.version>31.0.1-jre</guava.version>
+
     </properties>
 
     <dependencyManagement>
@@ -81,6 +83,17 @@
                 <version>${mapstruct.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
