--- a/beyond-library-ddd-application/pom.xml
+++ b/beyond-library-ddd-application/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
