feat: delete beyond-library-common && 添加接口耗时统计

--- a/beyond-library-ddd-adapter/pom.xml
+++ b/beyond-library-ddd-adapter/pom.xml
@@ -24,8 +24,13 @@
         </dependency>
 
         <dependency>
-            <groupId>com.beyond.library</groupId>
-            <artifactId>beyond-library-common</artifactId>
+            <groupId>com.beyond</groupId>
+            <artifactId>beyond-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.beyond</groupId>
+            <artifactId>beyond-config</artifactId>
         </dependency>
 
         <dependency>
@@ -36,8 +41,6 @@
         <dependency>
             <groupId>com.beyond.library</groupId>
             <artifactId>beyond-library-ddd-application</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
