--- a/beyond-library-ddd-start/src/main/resources/application.yml
+++ b/beyond-library-ddd-start/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: beyond-library-svc-account
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/beyond-library-account?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/beyond-library-account?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
     username: root
     password: lucifer
   jpa:
